Updated to latest Xorcery Removed module info